--- a/index.html
+++ b/index.html
@@ -166,7 +166,14 @@
             <span class="education-date">2013-2017</span>
             <h4>Savitribai Phule Pune University</h4>
             <p>
-                Completed BE in Computer Engineering with Distinction.
+                Completed BE in Computer Engineering with Distinction.<br>                
+                ACADEMIC PROJECT<br>
+                Project title: Transportation Portal (BE 2016-17)<br>
+                Duration: June 2016 -April 2017<br>
+                Description: The Portal will provide transportation details to user and will keep data
+                stored in Centralized database. We are providing Web portal and Android application where in
+                Android application notification system is provided. Further in portal we are
+                implementing this by using software only so surely it will reduce coast of Project.
                 <ul>
                     <li>
                         Got Mr.Academics award in Engineering, Dhole Patil Of Engineering College
@@ -180,13 +187,6 @@
                     <li>Participated into Cultural event of Kshitij 2015 ,2016 and 2017, Drama in Kshitij 2015
                         and 2016, Seed IT Idol</li>
                 </ul>
-                ACADEMIC PROJECT<br>
-                Project title: Transportation Portal (BE 2016-17)<br>
-                Duration: June 2016 -April 2017<br>
-                Description: The Portal will provide transportation details to user and will keep data
-                stored in Centralized database. We are providing Web portal and Android application where in
-                Android application notification system is provided. Further in portal we are
-                implementing this by using software only so surely it will reduce coast of Project.
             </p>
         </div>
         <!-- End .education-block -->
@@ -286,32 +286,46 @@
     <div id="skills" class="background-alt">
         <h2 class="heading">Skills</h2>
         <ul>
-            <li>JavaScript</li>
+            <li>Kubernetes</li>
+            <li>Docker</li>
+            <li>GitHub</li>
+            <li>GitLab</li>
+            <li>Jenkins</li>
+            <li>IBM Urban Code Deploy</li>
+            <li>Ansible</li>
+            <li>Jfrog</li>
+            <li>Nexus</li>
+            <li>IBM Cloud Container Registry</li>
+            <li>IBM Cloud Private</li>
+            <li>IBM Kubernetes Service</li>
+            <li>Amazon Web Services Cloud</li>
+            <li>Bash Script</li>
             <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
+            <li>Groovy Script</li>
+            <li>Kafka - Zookeeper</li>
+            <li>Vault</li>
+            <li>JIRA</li>
+            <li>jFrog Artifactory</li>
+            <li>Nexus Repository</li>
+            <li>Docker Trusted Registry</li>
+            <li>Sonarqube</li>
+            <li>ELK</li>
+            <li>Grafana-Prometheus</li>
+            <li>Zipkin</li>
+            <li>AppDynamics</li>
             <li>C</li>
-            <li>C#</li>
             <li>C++</li>
-            <li>Ruby on Rails</li>
-            <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
+            <li>Spring Boot</li>
+            <li>Confluence</li>
+            <li>IBM API Connect</li>
+            <li>Istio</li>
+            <li>Postman</li>
+            <li>Newman</li>
+            <li>AppDynamics</li>
+            <li>Apache</li>
+            <li>Tomcat</li>
+            <li>HashiCorp Vault and Kubernetes Secrets</li>
+            <li>Helm</li>
         </ul>
     </div>
     <!-- End #skills -->
@@ -322,24 +336,101 @@
         <div class="container">
             <div class="row">
                 <div class="education-block">
-                    <h3>Transportation Portal</h3>
-                    <span class="education-date">2017</span>
+                    <h3>DevOps Certificates</h3>
                     <p>
-                        Balkrishna Londhe , Dr.Arati Dandwate , Ashwini Parab , Kajal Gavhane ,
-                        Tejaswini Ingale: Transportation Portal, in: INTERNATIONAL JOURNAL OF
-                        INTERDISCIPLINARY INNOVATIVE RESEARCH AND DEVELOPMENT Vol. 01, Issue
-                        03, 03, Balkrishna Londhe , Dr.Arati Dandwate, 2017, ISBN/ISSN: 2456-236X
+                        <li>
+                            Learn Devops The Complete Kubernetes Course
+                        </li>
+                        <li>
+                            Hands-On Auto DevOps with GitLab CI
+                        </li>
+                        <li>
+                            GitLab introduction
+                        </li>
+                        <li>
+                            DevOps for DevOps Project Team Members
+                        </li>
+                        <li>
+                            Docker Essential
+                        </li>
+                        <li>
+                            Kubernetes Getting Started
+                        </li>
+                        <li>
+                            DevOps Essentials
+                        </li>
+                        <li>
+                            Get started with Kubernetes and IBM Cloud Container Service
+                        </li>
+                        <li>
+                            Docker Essentials: A Developer Introduction
+                        </li>
+                        <li>
+                            Containers, K8s and Istio on IBM Cloud
+                        </li>
+                        <li>
+                            Beyond the Basics: Istio and IBM Cloud Kubernetes Service
+                        </li>
+                        <li>
+                            Jenkins Beginner Tutorials
+                        </li>
+                        <li>
+                            Git: Become an Expert in Git and GitHub
+                        </li>
+                        <li>
+                            Build+Deploy+Test with Jenkins 2.0
+                        </li>
+                        <li>
+                            Ansible Advanced-HandsOn-DevOps
+                        </li>
+                        <li>
+                            DevOps learning path for DevOps Essentials badge
+                        </li>
+                        <li>
+                            DevOps - The pre-Requisite
+                        </li>
+                        <li>
+                            DevOps Crash Course: CI/CD with Jenkins Pipelines Groovy DSL
+                        </li>
+                        <li>
+                            Getting Started with Jenkins
+                        </li>
                     </p>
                 </div>
 
                 <div class="education-block">
-                    <h3>A Survey on Transportation portal</h3>
-                    <span class="education-date">Nov 2016</span>
+                    <h3>Non-DevOps Certificates</h3>
                     <p>
-                        Balkrishna Londhe , Dr.Arati Dandwate , Ashwini Parab , Kajal Gavhane , Tejaswini
-                        Ingale: A Survey on Transportation portal, in: International Journal of Innovative
-                        Research in Computer and Communication Engineering, Balkrishna Londhe , Dr.Arati
-                        Dandwate, 2016, ISBN/ISSN: 2320-9801
+                        <li>
+                            Java Certification from KTI
+                        </li>
+                        <li>
+                            Advance Java Certification
+                        </li>
+                        <li>
+                            Workshop on Ethical Hacking and Computer Forensics
+                        </li>
+                        <li>
+                            MS-CIT
+                        </li>
+                        <li>
+                            C Language
+                        </li>
+                        <li>
+                            C++ Language
+                        </li>
+                        <li>
+                            Enterprise Design Thinking Practitioner
+                        </li>
+                        <li>
+                            Enterprise Design Thinking Co-Creator
+                        </li>
+                        <li>
+                            IBM Automation Essentials
+                        </li>
+                        <li>
+                            Cognitive Practitioner
+                        </li>
                     </p>
                 </div>
             </div>
